Bug 768348. Avoid ExtCreatePen failures by avoiding rounding widths and dash lengths down to zero. r=jrmuizel

--HG--
extra : rebase_source : 5231a02af67486dbd0e663d3756ad60fe1483157